--- a/html/parts.html
+++ b/html/parts.html
@@ -6,7 +6,7 @@
     <!-- site/metas -->
     <title>Kilbeg</title>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="public/images/favicon.png" />
+    <link rel="shortcut icon" href="../public/images/favicon.png" />
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- styles -->
-    <link rel="stylesheet" href="public/css/wrap/full/rmcc.min.css">
-    <link rel="stylesheet" href="public/css/kcg.css">
+    <link rel="stylesheet" href="../public/css/wrap/full/rmcc.min.css">
+    <link rel="stylesheet" href="../public/css/kcg.css">
 
     <!-- scripts -->
-    <script src="public/js/rmcc.min.js"></script>
-    <script src="public/js/rmcc-icons.min.js"></script>
+    <script src="../public/js/rmcc.min.js"></script>
+    <script src="../public/js/rmcc-icons.min.js"></script>
 
   </head>
 
@@ -37,7 +37,7 @@
                     <a class="rmcc-navbar-item rmcc-logo" href="#">
                       <div class="rmcc-grid-small rmcc-grid-match rmcc-flex rmcc-flex-middle rmcc-grid" rmcc-grid="">
                         <div class="logo-img rmcc-width-auto rmcc-first-column">
-                          <img class="logo" src="public/images/logo/logo.png">
+                          <img class="logo" src="../public/images/logo/logo.png">
                         </div>
                         <div class="logo-text rmcc-width-expand">
                           <h3>Kilbeggan Community Group</h3>
@@ -210,12 +210,12 @@
             <div class="rmcc-cover-container rmcc-position-relative rmcc-visible-toggle">
   
               <!-- bg slider -->
-              <!-- <img src="public/images/harbour.jpg" alt="" rmcc-cover> -->
+              <!-- <img src="../public/images/harbour.jpg" alt="" rmcc-cover> -->
               <div class="hero-slideshow rmcc-position-relative rmcc-light" tabindex="0" rmcc-slideshow="finite: true; autoplay: false; autoplay-interval: 3000; animation: slide">
                 <div class="rmcc-slideshow-items rmcc-height-large">
-                  <img src="public/images/harbour.jpg" class="rmcc-height-large" alt="" loading="lazy" rmcc-cover>
-                  <img src="public/images/pitch.jpg" class="rmcc-height-large" alt="" loading="lazy" rmcc-cover>
-                  <img src="public/images/ballymore.jpg" class="rmcc-height-large" alt="" loading="lazy" rmcc-cover>
+                  <img src="../public/images/harbour.jpg" class="rmcc-height-large" alt="" loading="lazy" rmcc-cover>
+                  <img src="../public/images/pitch.jpg" class="rmcc-height-large" alt="" loading="lazy" rmcc-cover>
+                  <img src="../public/images/ballymore.jpg" class="rmcc-height-large" alt="" loading="lazy" rmcc-cover>
                 </div>
                 <a class="rmcc-position-center-left rmcc-position-center-left-out rmcc-position-small rmcc-hidden-hover rmcc-position-z-index" href rmcc-slidenav-previous rmcc-slideshow-item="previous"></a>
                 <a class="rmcc-position-center-right rmcc-position-center-right-out rmcc-position-small rmcc-hidden-hover rmcc-position-z-index" href rmcc-slidenav-next rmcc-slideshow-item="next"></a>
@@ -284,7 +284,7 @@
             <div class="rmcc-cover-container rmcc-position-relative rmcc-visible-toggle rmcc-height-large">
   
               <!-- bg image -->
-              <img class="gray" src="public/images/harbour.jpg" alt="" rmcc-cover>
+              <img class="gray" src="../public/images/harbour.jpg" alt="" rmcc-cover>
   
               <!-- overlay -->
               <div class="rmcc-overlay-primary rmcc-position-cover"></div>
@@ -349,7 +349,7 @@
             <div class="rmcc-cover-container rmcc-position-relative rmcc-visible-toggle rmcc-height-large smaller">
   
               <!-- bg image -->
-              <img src="public/images/services-header-background.jpg" alt="" rmcc-cover>
+              <img src="../public/images/services-header-background.jpg" alt="" rmcc-cover>
   
               <!-- overlay -->
               <!-- <div class="rmcc-overlay-primary rmcc-position-cover"></div> -->
@@ -414,7 +414,7 @@
             <div class="rmcc-cover-container rmcc-position-relative rmcc-visible-toggle rmcc-height-large mediumer">
   
               <!-- bg image -->
-              <img src="public/images/products-header-background.jpg" alt="" rmcc-cover>
+              <img src="../public/images/products-header-background.jpg" alt="" rmcc-cover>
   
               <!-- overlay -->
               <!-- <div class="rmcc-overlay-primary rmcc-position-cover"></div> -->
@@ -1189,7 +1189,7 @@
         <div id="Markers">
           <div class="rmcc-container rmcc-section rmcc-flex rmcc-flex-center">
             <div class="rmcc-inline">
-              <img src="public/images/map.png" class="rmcc-width-1-1" alt="">
+              <img src="../public/images/map.png" class="rmcc-width-1-1" alt="">
 
               <a id="Mullingar" class="rmcc-position-absolute rmcc-transform-center rmcc-marker" style="left: 61.5%; top: 56%" href="#" rmcc-marker></a>
               <a id="Castletown" class="rmcc-position-absolute rmcc-transform-center rmcc-marker" style="left: 48%; top: 71%" href="#" rmcc-marker></a>
@@ -1251,7 +1251,7 @@
             <li>
               <div class="rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
                 <div>
-                  <img src="public/images/resource-card.jpg" width="1800" height="1800" alt="">
+                  <img src="../public/images/resource-card.jpg" width="1800" height="1800" alt="">
                   <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary">
                     <div class="rmcc-position-top-left rmcc-position-small">
                       <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1260,7 +1260,7 @@
                   </div>
                 </div>
                 <div class="rmcc-transition-slide-left rmcc-position-cover">
-                  <img src="public/images/resource-building.jpg" width="1800" height="1800" alt="">
+                  <img src="../public/images/resource-building.jpg" width="1800" height="1800" alt="">
                   <div class="rmcc-position-cover">
                     <div class="rmcc-position-center rmcc-text-center rmcc-position-small">
                       <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1273,7 +1273,7 @@
             <li>
               <div class="rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
                 <div>
-                  <img src="public/images/resource-card.jpg" width="1800" height="1800" alt="">
+                  <img src="../public/images/resource-card.jpg" width="1800" height="1800" alt="">
                   <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary">
                     <div class="rmcc-position-top-left rmcc-position-small">
                       <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1282,7 +1282,7 @@
                   </div>
                 </div>
                 <div class="rmcc-transition-fade rmcc-position-cover">
-                  <img src="public/images/resource-building.jpg" width="1800" height="1800" alt="">
+                  <img src="../public/images/resource-building.jpg" width="1800" height="1800" alt="">
                   <div class="rmcc-position-cover">
                     <div class="rmcc-position-center rmcc-text-center rmcc-position-small">
                       <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1295,7 +1295,7 @@
             <li>
               <div class="rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
                 <div>
-                  <img src="public/images/resource-card.jpg" width="1800" height="1800" alt="">
+                  <img src="../public/images/resource-card.jpg" width="1800" height="1800" alt="">
                   <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary">
                     <div class="rmcc-position-top-left rmcc-position-small">
                       <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1304,7 +1304,7 @@
                   </div>
                 </div>
                 <div class="rmcc-transition-slide-right rmcc-position-cover">
-                  <img src="public/images/resource-building.jpg" width="1800" height="1800" alt="">
+                  <img src="../public/images/resource-building.jpg" width="1800" height="1800" alt="">
                   <div class="rmcc-position-cover">
                     <div class="rmcc-position-center rmcc-text-center rmcc-position-small">
                       <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1357,7 +1357,7 @@
 
         <!-- 3x grid with icons -->
         <section class="rmcc-inline rmcc-margin">
-          <img src="https://test.com/projects/kilbeg/public/images/bluewater-bg.png" alt="">
+          <img src="../public/images/bluewater-bg.png" alt="">
           <div class="rmcc-position-center rmcc-text-center rmcc-light">
             <h2 class="rmcc-text-uppercase">Why Maria<em>DB</em>?</h2>
             <div class="rmcc-container">
@@ -1395,7 +1395,7 @@
           <li>
             <div class="rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
               <div>
-                <img src="public/images/resource-card.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-card.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary">
                   <div class="rmcc-position-top-left rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1404,7 +1404,7 @@
                 </div>
               </div>
               <div class="rmcc-transition-slide-left rmcc-position-cover">
-                <img src="public/images/resource-building.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-building.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover">
                   <div class="rmcc-position-center rmcc-text-center rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1417,7 +1417,7 @@
           <li>
             <div class="rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
               <div>
-                <img src="public/images/resource-card.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-card.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary">
                   <div class="rmcc-position-top-left rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1426,7 +1426,7 @@
                 </div>
               </div>
               <div class="rmcc-transition-fade rmcc-position-cover">
-                <img src="public/images/resource-building.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-building.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover">
                   <div class="rmcc-position-center rmcc-text-center rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1439,7 +1439,7 @@
           <li>
             <div class="rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
               <div>
-                <img src="public/images/resource-card.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-card.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary">
                   <div class="rmcc-position-top-left rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1448,7 +1448,7 @@
                 </div>
               </div>
               <div class="rmcc-transition-slide-right rmcc-position-cover">
-                <img src="public/images/resource-building.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-building.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover">
                   <div class="rmcc-position-center rmcc-text-center rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1464,7 +1464,7 @@
           <li>
             <div class="rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
               <div>
-                <img src="public/images/resource-card.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-card.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary">
                   <div class="rmcc-position-top-left rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1473,7 +1473,7 @@
                 </div>
               </div>
               <div class="rmcc-transition-slide-left rmcc-position-cover">
-                <img src="public/images/resource-building.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-building.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover">
                   <div class="rmcc-position-center rmcc-text-center rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1486,7 +1486,7 @@
           <li>
             <div class="rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
               <div>
-                <img src="public/images/resource-card.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-card.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary">
                   <div class="rmcc-position-top-left rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1495,7 +1495,7 @@
                 </div>
               </div>
               <div class="rmcc-transition-fade rmcc-position-cover">
-                <img src="public/images/resource-building.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-building.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover">
                   <div class="rmcc-position-center rmcc-text-center rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1508,7 +1508,7 @@
           <li>
             <div class="rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
               <div>
-                <img src="public/images/resource-card.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-card.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary">
                   <div class="rmcc-position-top-left rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
@@ -1517,7 +1517,7 @@
                 </div>
               </div>
               <div class="rmcc-transition-slide-right rmcc-position-cover">
-                <img src="public/images/resource-building.jpg" width="1800" height="1800" alt="">
+                <img src="../public/images/resource-building.jpg" width="1800" height="1800" alt="">
                 <div class="rmcc-position-cover">
                   <div class="rmcc-position-center rmcc-text-center rmcc-position-small">
                     <h4 class="rmcc-margin-remove text-normal rmcc-text-uppercase">Customer Story</h4>
