--- a/html/rmcc.html
+++ b/html/rmcc.html
@@ -580,7 +580,7 @@
 
     <div class="rmcc-wrap">
       
-      <div id="PageSections" hidden>
+      <div id="PageSections">
 
         <header class="page-header">
           <div class="rmcc-position-relative rmcc-position-z-index rmcc-light">
@@ -825,7 +825,7 @@
   
       </div>
   
-      <div id="MorePageSections" hidden>
+      <div id="MorePageSections">
   
         <header class="page-header">
           <div class="rmcc-position-relative rmcc-position-z-index rmcc-light">
