--- a/html/index.html
+++ b/html/index.html
@@ -561,7 +561,7 @@
 
   <body>
 
-    <div id="PageSections" hidden>
+    <div id="PageSections">
 
       <header class="page-header">
         <div class="uk-position-relative uk-position-z-index uk-light">
@@ -806,7 +806,7 @@
 
     </div>
 
-    <div id="MorePageSections" hidden>
+    <div id="MorePageSections">
 
       <header class="page-header">
         <div class="uk-position-relative uk-position-z-index uk-light">
