--- a/html/parts.html
+++ b/html/parts.html
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- styles -->
-    <link rel="stylesheet" href="../public/css/wrap/full/rmcc.min.css">
-    <link rel="stylesheet" href="../public/css/kcg.css">
+    <link rel="stylesheet" href="../public/_css/wrap/full/rmcc.min.css">
+    <link rel="stylesheet" href="../public/_css/kcg.css">
 
     <!-- scripts -->
-    <script src="../public/js/rmcc.min.js"></script>
-    <script src="../public/js/rmcc-icons.min.js"></script>
+    <script src="../public/_js/rmcc.min.js"></script>
+    <script src="../public/_js/rmcc-icons.min.js"></script>
 
   </head>
 
