feed insert no conflict

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="public/js/rmcc.min.js"></script>
 
     <!--FEED: css -->
-    <link href="public/feed/css/mjf-2col.min.css" rel="stylesheet">
+    <link href="public/feed/css/mjf.min.css" rel="stylesheet">
 
   </head>
 
