--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </li>
     </ul>
 
+    <!--FEED: html -->
     <h1>Feeds (mjf)</h1>
     <div class="mjf-wrap">
       <div class="mjf-container mjf-section-small">
